--- a/GnuCashUtils/Home/MainWindow.axaml
+++ b/GnuCashUtils/Home/MainWindow.axaml
@@ -1,18 +1,18 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:GnuCashUtils.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:home="clr-namespace:GnuCashUtils.Home"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="GnuCashUtils.Views.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
+        x:Class="GnuCashUtils.Home.MainWindow"
+        x:DataType="home:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
         Title="GnuCashUtils">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
+        <home:MainWindowViewModel/>
     </Design.DataContext>
 
     <StackPanel>
