--- a/GnuCashUtils/Categorization/CategorizationWindow.axaml
+++ b/GnuCashUtils/Categorization/CategorizationWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:categorization="clr-namespace:GnuCashUtils.Categorization"
+        xmlns:controls="clr-namespace:GnuCashUtils.Core.Controls"
         mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="600"
         x:Class="GnuCashUtils.Categorization.CategorizationWindow"
         x:DataType="categorization:CategorizationWindowViewModel"
@@ -18,7 +19,40 @@
                   ItemsSource="{Binding Rows}"
                   CanUserReorderColumns="True"
                   CanUserResizeColumns="True"
-                  IsReadOnly="True" />
+                  FontSize="12">
+            <DataGrid.Columns>
+
+                <!-- CSV columns are prepended dynamically in code-behind -->
+
+                <DataGridTextColumn Header="Merchant"
+                                    Binding="{Binding Merchant}"
+                                    Width="160" />
+
+                <DataGridTemplateColumn Header="Account" Width="240">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate x:DataType="categorization:CategorizationRowViewModel">
+                            <TextBlock Text="{Binding SelectedAccount.Name}"
+                                       VerticalAlignment="Center"
+                                       FontSize="12"
+                                       Margin="4 0" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.CellEditingTemplate>
+                        <DataTemplate x:DataType="categorization:CategorizationRowViewModel">
+                            <controls:AccountComboBox ItemsSource="{Binding Accounts}"
+                                                      SelectedItem="{Binding SelectedAccount}">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Name}" FontSize="12"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </controls:AccountComboBox>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellEditingTemplate>
+                </DataGridTemplateColumn>
+
+            </DataGrid.Columns>
+        </DataGrid>
     </DockPanel>
 
 </Window>
