--- a/GnuCashUtils/Categorization/CategorizationWindow.axaml
+++ b/GnuCashUtils/Categorization/CategorizationWindow.axaml
@@ -10,9 +10,12 @@
         Title="Categorization">
 
     <DockPanel Margin="8">
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0 0 0 8">
-            <Button Content="Open CSV" Click="OpenCsvButton_Click" Margin="0 0 8 0" />
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0 0 0 8" Spacing="8">
+            <Button Content="Open CSV" Click="OpenCsvButton_Click" />
             <TextBlock Text="{Binding CsvFilePath}" VerticalAlignment="Center" />
+            <CheckBox Content="Show only errors"
+                      IsChecked="{Binding ShowOnlyErrors}"
+                      VerticalAlignment="Center" />
         </StackPanel>
 
         <DataGrid x:Name="CsvDataGrid"
@@ -21,6 +24,11 @@
                   CanUserResizeColumns="True"
                   FontSize="12">
             <DataGrid.Columns>
+
+                <DataGridTextColumn Header=""
+                                    Binding="{Binding StatusIcon}"
+                                    IsReadOnly="True"
+                                    Width="48" />
 
                 <DataGridTextColumn Header="Date"
                                     Binding="{Binding Date}"
@@ -50,9 +58,10 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.CellEditingTemplate>
-                        <DataTemplate x:DataType="categorization:CategorizationRowViewModel">
-                            <controls:AccountComboBox ItemsSource="{Binding Accounts}"
-                                                      SelectedItem="{Binding SelectedAccount}">
+                        <DataTemplate x:CompileBindings="False">
+                            <controls:AccountComboBox
+                                ItemsSource="{Binding DataContext.Accounts, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+                                SelectedItem="{Binding SelectedAccount}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding Name}" FontSize="12"/>
