--- a/GnuCashUtils/Categorization/CategorizationWindow.axaml
+++ b/GnuCashUtils/Categorization/CategorizationWindow.axaml
@@ -17,12 +17,22 @@
                       IsChecked="{Binding ShowOnlyErrors}"
                       VerticalAlignment="Center" />
         </StackPanel>
+        
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
+            <TextBlock Text="{Binding InvalidCount, StringFormat='{}{0} transactions to categorize'}" />
+            <Button Content="Save" Command="{Binding SaveCommand}" />
+        </StackPanel>
 
         <DataGrid x:Name="CsvDataGrid"
                   ItemsSource="{Binding Rows}"
                   CanUserReorderColumns="True"
                   CanUserResizeColumns="True"
                   FontSize="12">
+            <DataGrid.Styles>
+                <Style Selector="DataGridTextColumn">
+                    <Setter Property="FontSize" Value="12" />
+                </Style>
+            </DataGrid.Styles>
             <DataGrid.Columns>
 
                 <DataGridTextColumn Header=""
@@ -37,7 +47,7 @@
 
                 <DataGridTextColumn Header="Description"
                                     Binding="{Binding Description}"
-                                    Width="280" />
+                                    Width="280"  />
 
                 <DataGridTextColumn Header="Amount"
                                     Binding="{Binding Amount}"
@@ -53,7 +63,6 @@
                         <DataTemplate x:DataType="categorization:CategorizationRowViewModel">
                             <TextBlock Text="{Binding SelectedAccount.Name}"
                                        VerticalAlignment="Center"
-                                       FontSize="12"
                                        Margin="4 0" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
@@ -64,7 +73,7 @@
                                 SelectedItem="{Binding SelectedAccount}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Name}" FontSize="12"/>
+                                        <TextBlock Text="{Binding Name}"  />
                                     </DataTemplate>
                                 </ComboBox.ItemTemplate>
                             </controls:AccountComboBox>
@@ -74,6 +83,7 @@
 
             </DataGrid.Columns>
         </DataGrid>
+        
     </DockPanel>
 
 </Window>
