--- a/GnuCashUtils/Categorization/CategorizationWindow.axaml
+++ b/GnuCashUtils/Categorization/CategorizationWindow.axaml
@@ -3,7 +3,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:categorization="clr-namespace:GnuCashUtils.Categorization"
-        xmlns:controls="clr-namespace:GnuCashUtils.Core.Controls"
         mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="600"
         x:Class="GnuCashUtils.Categorization.CategorizationWindow"
         x:DataType="categorization:CategorizationWindowViewModel"
@@ -68,15 +67,17 @@
                     </DataGridTemplateColumn.CellTemplate>
                     <DataGridTemplateColumn.CellEditingTemplate>
                         <DataTemplate x:CompileBindings="False">
-                            <controls:AccountComboBox
+                            <AutoCompleteBox
                                 ItemsSource="{Binding DataContext.Accounts, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                                SelectedItem="{Binding SelectedAccount}">
-                                <ComboBox.ItemTemplate>
+                                SelectedItem="{Binding SelectedAccount}"
+                                FilterMode="ContainsOrdinal"
+                                ValueMemberBinding="{Binding FullName}">
+                                <AutoCompleteBox.ItemTemplate>
                                     <DataTemplate>
-                                        <TextBlock Text="{Binding Name}"  />
+                                        <TextBlock Text="{Binding FullName}" />
                                     </DataTemplate>
-                                </ComboBox.ItemTemplate>
-                            </controls:AccountComboBox>
+                                </AutoCompleteBox.ItemTemplate>
+                            </AutoCompleteBox>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellEditingTemplate>
                 </DataGridTemplateColumn>
