--- a/GnuCashUtils/Categorization/CategorizationWindow.axaml
+++ b/GnuCashUtils/Categorization/CategorizationWindow.axaml
@@ -17,9 +17,10 @@
                       VerticalAlignment="Center" />
         </StackPanel>
         
-        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
-            <TextBlock Text="{Binding InvalidCount, StringFormat='{}{0} transactions to categorize'}" />
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Spacing="8">
+            <TextBlock Text="{Binding InvalidCount, StringFormat='{}{0} transactions to categorize'}" VerticalAlignment="Center" />
             <Button Content="Save" Command="{Binding SaveCommand}" />
+            <TextBlock Text="{Binding StatusMessage}" VerticalAlignment="Center" />
         </StackPanel>
 
         <DataGrid x:Name="CsvDataGrid"
