--- a/GnuCashUtils/Tagger/TaggerWindow.axaml
+++ b/GnuCashUtils/Tagger/TaggerWindow.axaml
@@ -74,6 +74,34 @@
                 <DataGridTextColumn Header="Description" Binding="{Binding Description}" IsReadOnly="True" />
                 <DataGridTextColumn Header="Amount" Binding="{Binding Amount}" IsReadOnly="True" />
                 <DataGridTextColumn Header="Expense Account" Binding="{Binding Account.Name}" IsReadOnly="True" />
+                <DataGridTemplateColumn Header="Tags" IsReadOnly="True" Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate x:DataType="vm:TaggedTransaction">
+                            <ItemsControl ItemsSource="{Binding Tags}" VerticalAlignment="Center" Margin="2 0">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel Orientation="Horizontal" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate x:DataType="vm:Tag">
+                                        <Border
+                                            Background="{Binding Name, Converter={x:Static vm:Converters.TagNameToColor}}"
+                                            CornerRadius="10"
+                                            Padding="7 2"
+                                            Margin="2 2">
+                                            <TextBlock
+                                                Text="{Binding Converter={x:Static vm:Converters.TagToDisplayText}}"
+                                                Foreground="White"
+                                                FontSize="11"
+                                                VerticalAlignment="Center" />
+                                        </Border>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
 
         </DataGrid>
